fix: increase z-index of search button for improved visibility

--- a/src/index.css
+++ b/src/index.css
@@ -50,12 +50,12 @@ body{
   width: auto;
   height: 6vh;
 }
-a .search_btn{
+ .search_btn{
   transform: translateX(5rem);
   width: auto;
   height: 4vh;
   cursor: pointer;
-  z-index: 1;
+  z-index: 100;
 }
 .support{
   transform: translateX(33.5rem);
